# redis-generate

./: Cargo.toml
.github/workflows/: main.yml
src/: main.rs
