[package]
name = "redis-generate"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.117"
redis = "0.25.3"
clap = { version = "4.5.7", features = ["derive"] }
regex = "1.10.5"
rayon = "1.10.0"
ulid = "1.1.2"

[profile.release]
strip = true 
opt-level = 3
lto = true

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "target-feature=+crt-static"]
 
[target.'cfg(target_os = "windows")']
rustflags = ["-C", "target-feature=+crt-static"]